[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gam3arch"
version = "3.1.0"
description = "GAM3ARCH — A Cognitive Architecture for Ethical Game Design and Player Burnout Analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Andrey A. Skrobov"},
]
keywords = ["gam3arch", "burnout", "game-design", "cognitive", "agent-based", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.28"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
gam3arch = "run:main"

[project.urls]
Homepage = "https://github.com/Andrey-veksler/GAM3ARCH"
Paper = "https://www.academia.edu/144868913"
DOI = "https://zenodo.org/records/20708078"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
